--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -71,8 +71,7 @@ jobs:
       - name: Docker build
         uses: docker/build-push-action@v6
         with:
-          file: context/Dockerfile
-          context: context/
+          context: context
           builder: ${{ steps.buildx.outputs.name }}
           platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
