--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,7 +34,7 @@ jobs:
         run: pip install ansible-builder
 
       - name: Create context
-        run: ansible-builder create
+        run: ansible-builder create --output-filename=Dockerfile
 
       - name: Docker meta
         id: meta
